--- a/src/main/resources/dk/easv/librarysystem/MainPage.fxml
+++ b/src/main/resources/dk/easv/librarysystem/MainPage.fxml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 
-<?import javafx.scene.control.Button?>
-<VBox alignment="CENTER" spacing="20.0" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="dk.easv.librarysystem.GUI.MainPageController">
-    <padding>
-        <Insets bottom="20.0" left="20.0" right="20.0" top="20.0"/>
-    </padding>
 
-    <Label fx:id="welcomeText"/>
-    <Button text="Hello!" onAction="#onHelloButtonClick"/>
-</VBox>
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dk.easv.librarysystem.GUI.MainPageController">
+   <left>
+      <TabPane prefHeight="200.0" prefWidth="200.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
+        <tabs>
+          <Tab fx:id="tabMenu" onCloseRequest="#tabClose" onSelectionChanged="#tabMenu" text="Tab">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+            </content>
+          </Tab>
+        </tabs>
+      </TabPane>
+   </left>
+   <center>
+      <HBox prefHeight="100.0" prefWidth="200.0" BorderPane.alignment="CENTER">
+         <children>
+            <MFXButton minHeight="-Infinity" minWidth="-Infinity" onAction="#btnCheckInn" prefHeight="75.0" prefWidth="150.0" text="Check Inn">
+               <HBox.margin>
+                  <Insets left="175.0" top="275.0" />
+               </HBox.margin>
+            </MFXButton>
+            <MFXButton minHeight="-Infinity" minWidth="-Infinity" onAction="#btnCheckOut" prefHeight="75.0" prefWidth="150.0" text="Check Out">
+               <HBox.margin>
+                  <Insets left="50.0" top="275.0" />
+               </HBox.margin>
+            </MFXButton>
+         </children>
+      </HBox>
+   </center>
+</BorderPane>
